# USB-Audio-Tests

./: .gitignore  .gitmodules  README.md
Wireshark/: Maudio-soundcard.pcapng  USBCapture-experiment-2.pcapng  USBCapture-experiment-3.pcapng
audio_generator/: audio_generator.py
captures/Experiment-1/: .~lock.Experiment-1.csv#  Experiment-1.csv  Experiment-1.sal
captures/Experiment-1-1/: Experiment-1-1-Datalenght.csv  Experiment-1-1.csv  Experiment-1-1.sal
captures/Experiment-1-2/: Experiment-1-2-Datalenght.csv  Experiment-1-2.csv  Experiment-1-2.sal
captures/Experiment-1-3/: Experiment-1-3-Datalenght.csv  Experiment-1-3.csv  Experiment-1-3.sal
captures/Experiment-2-1/: Experiment-2-1-serial.csv  Experiment-2-1.csv  Experiment-2-1.sal
captures/Experiment-3/: Experiment-3.sal
captures/Experiment-3-1/: Experiment-3-1.sal  digital.csv  rate.csv  serial.csv
captures/Experiment-3-2/: Experiment-3-2.sal  digital.csv  rate.csv
captures/Experiment-3-3/: Experiment-3-3.sal  rate.csv
embedded/: Cargo.toml
embedded/.cargo/: config.toml
embedded/src/: codec.rs  debug_gpio.rs  lib.rs  serial.rs  usb.rs
parser/: parser.py
src/: lib.rs  usb.rs
