[package]
name = "usb_audio_tests"
edition = "2021"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
defmt = { version = "0.3", features = ["encoding-rzcobs"] }
defmt-brtt = { version = "0.1", default-features = false, features = ["rtt"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
rtic = { version = "2.0.0-alpha.1", features = [ "thumbv7-backend" ] }
# stm32h7xx-hal = { version = "0.16.1", features = ["stm32h711", "rt", "usb_fs", "i2s"] }
stm32h7xx-hal = { version = "0.14.0", features = ["stm32h743v", "usb_hs"] }
cortex-m-rt = "0.7.3"

# TODO add a monotonic if you use scheduling
rtic-monotonics = { version = "1.0.0-alpha.2", features = [ "cortex-m-systick" ]}

# USB audio stuff
fugit = "0.3.6"
heapless = "0.7.16"

#usb-device = { path = "../dependencies/usb-device", version = "0.2.8", features = ["control-buffer-256"] }
usbd-audio = { path = "../dependencies/usbd-audio" }

usb-device = { version = "0.2.8", features = ["control-buffer-256"] }
#usbd-audio = { git = "https://github.com/kiffie/usbd-audio" }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = "s" # <-
overflow-checks = true # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = "s" # <-
overflow-checks = false # <-

# uncomment this to switch from the crates.io version of defmt to its git version
# check app-template's README for instructions
# [patch.crates-io]
# defmt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
# panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "use defmt version reported by `probe-run --version`" }
